# seqan_tutorial_sandbox

./: CMakeLists.txt  README.md  todo.txt
apps/: CMakeLists.txt
apps/alignment1/: CMakeLists.txt  INFO  alignment1.cpp
apps/alignment2/: CMakeLists.txt  alignment2.cpp
apps/alphabets1/: CMakeLists.txt  INFO  alphabets1.cpp
apps/basic_sequence_io1/: CMakeLists.txt  INFO  basic_sequence_io1.cpp
apps/basic_sequence_io2/: CMakeLists.txt  INFO  basic_sequence_io2.cpp
apps/basic_sequence_io3/: CMakeLists.txt  INFO  basic_sequence_io3.cpp
apps/basic_sequence_io4/: CMakeLists.txt  INFO  basic_sequence_io4.cpp
apps/basic_sequence_io5/: CMakeLists.txt  INFO  basic_sequence_io5.cpp
apps/basic_sequence_io6/: CMakeLists.txt  INFO  basic_sequence_io6.cpp
apps/first_steps1/: CMakeLists.txt  INFO
apps/first_steps2/: CMakeLists.txt  INFO  first_steps2.cpp
apps/first_steps3/: CMakeLists.txt  INFO  first_steps3.cpp
apps/first_steps4/: CMakeLists.txt  INFO  first_steps4.cpp
apps/first_steps5/: CMakeLists.txt  INFO  first_steps5.cpp
apps/first_steps6/: CMakeLists.txt  INFO  first_steps6.cpp
apps/graphs1/: CMakeLists.txt  graphs1.cpp
apps/graphs2/: CMakeLists.txt  INFO  graphs2.cpp
apps/graphs3/: CMakeLists.txt  INFO  graphs3.cpp
apps/graphs4/: CMakeLists.txt  INFO  graphs4.cpp
apps/graphs5/: CMakeLists.txt  INFO  graphs5.cpp
apps/graphs6/: CMakeLists.txt  INFO  graphs6.cpp
apps/indices1/: CMakeLists.txt  INFO  indices1.cpp
apps/indices2/: CMakeLists.txt  INFO  indices2.cpp
apps/iterators1/: CMakeLists.txt  INFO  iterators1.cpp
apps/iterators2/: CMakeLists.txt  INFO  iterators2.cpp
apps/iteratorsWA3/: CMakeLists.txt  INFO  iteratorsWA3.cpp
apps/iteratorsWA4/: CMakeLists.txt  INFO  iteratorsWA4.cpp
apps/metafunctions/: CMakeLists.txt  INFO  metafunctions.cpp
apps/msa1/: CMakeLists.txt  INFO  msa1.cpp
apps/pairwise_align1/: CMakeLists.txt  INFO  pairwise_align1.cpp
apps/pairwise_align2/: CMakeLists.txt  INFO  pairwise_align2.cpp
apps/pairwise_align3/: CMakeLists.txt  INFO  pairwise_align3.cpp
apps/pairwise_align4/: CMakeLists.txt  INFO  pairwise_align4.cpp
apps/pairwise_align5/: CMakeLists.txt  INFO  pairwise_align5.cpp
apps/parsing_arguments1/: CMakeLists.txt  INFO  parsing_arguments1.cpp
apps/parsing_arguments2/: CMakeLists.txt  INFO  parsing_arguments2.cpp
apps/parsing_arguments3/: CMakeLists.txt  INFO  parsing_arguments3.cpp
apps/parsing_arguments4/: CMakeLists.txt  INFO  parsing_arguments4.cpp
apps/parsing_arguments5/: CMakeLists.txt  INFO  parsing_arguments5.cpp
apps/parsing_arguments6/: CMakeLists.txt  INFO  parsing_arguments6.cpp
apps/sequences-in-depthWA1/: CMakeLists.txt  INFO  sequences-in-depthWA1.cpp
apps/sequences1/: CMakeLists.txt  INFO  sequences1.cpp
apps/sequences2/: CMakeLists.txt  INFO  sequences2.cpp
apps/sequences3/: CMakeLists.txt  INFO  sequences3.cpp
apps/sequences4/: CMakeLists.txt  INFO  sequences4.cpp
apps/sequencesWA/: CMakeLists.txt  INFO  sequencesWA.cpp
apps/stringsets1/: CMakeLists.txt  INFO  stringsets1.cpp
apps/stringsets2/: CMakeLists.txt  INFO  stringsets2.cpp
apps/stringsetsWA4/: CMakeLists.txt  INFO  stringsetsWA4.cpp
demos/: CMakeLists.txt
tests/: CMakeLists.txt
